dark mode fixes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31886,14 +31886,6 @@ video {
   font-style: normal;
 }
 
-body {
-  background: url(/img/whitepaper-bg.png);
-}
-
-body.dark-bg {
-  background: url(/img/y-so-serious.png) !important;
-}
-
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
