--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,11 +11,3 @@
     font-weight: normal;
     font-style: normal;
 }
-
-body {
-    background: url(/img/whitepaper-bg.png);
-}
-
-body.dark-bg {
-    background: url(/img/y-so-serious.png) !important;
-}
